# btsync-qt

./: CMakeLists.txt
btsync-qt/: CMakeLists.txt  btsync-qt.desktop.in  btsyncqt.desktop.in
btsync-qt/res/: icon.rc  res.qrc
btsync-qt/src/: addfolderdialog.cpp  addfolderdialog.h  deviceswidget.cpp  deviceswidget.h  folderinfodialog.cpp  folderinfodialog.h  historywidget.cpp  historywidget.h  main.cpp  mainwin.cpp  mainwin.h  preferenceswidget.cpp  preferenceswidget.h  qrcodewidget.cpp  qrcodewidget.h  sharedfolderswidget.cpp  sharedfolderswidget.h  sighandler.cpp  sighandler.h  transferswidget.cpp  transferswidget.h  utils.cpp  utils.h
btsync-qt/ui/: addfolderdialog.ui  devices.ui  folderinfo.ui  history.ui  mainwin.ui  preferences.ui  sharedFolders.ui  sharedfolders.ui  transfers.ui
cmake/Modules/: FindQrencode.cmake
libbtsync-qt/: CMakeLists.txt  LibBtsyncQtConfig.cmake.in  LibBtsyncQtConfigVersion.cmake.in
libbtsync-qt/include/: bts_api.h  bts_apifolder.h  bts_client.h  bts_export_helper.h  bts_global.h  bts_remoteclient.h  bts_spawnclient.h
libbtsync-qt/src/: bts_api.cpp  bts_apifolder.cpp  bts_client.cpp  bts_global.cpp  bts_remoteclient.cpp  bts_spawnclient.cpp
libqrencode/: CMakeLists.txt
libqrencode/src/: config.h  qrencode.c  qrinput.c  split.c
